# hardhat-diamond-tools

./: .gitignore  Cargo.nix  Cargo.toml  README.md  flake.nix  rust-toolchain.toml  shell.nix
.github/workflows/: ci.yaml  publish.yaml  rust.yaml
cli/: Cargo.toml  README.md  default.nix
cli/src/: actions.rs  args.rs  cli.rs  hardhat.rs  main.rs
core/: Cargo.toml  README.md
core/src/: engine.rs  filter.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: abi.rs  filter.rs  hardhat.rs  lib.rs  merger.rs  name.rs  signature.rs
crates/hardhat-bindings/: Cargo.toml
crates/hardhat-bindings-macro/: Cargo.toml
crates/hardhat-bindings-macro/src/: lib.rs  params.rs
crates/hardhat-bindings-macro/tests/: test_params_derive.rs
crates/hardhat-bindings/src/: artifacts.rs  config.rs  lib.rs  params.rs  runtime.rs
crates/hardhat-bindings/src/bindings/: artifacts.rs  config.rs  mod.rs  runtime.rs
docs/: README.md
nix/foundry/: default.nix  install.sh
plugin/: Cargo.toml  README.md  index.js  package-lock.json  package.json
plugin/scripts/: after-build.sh  build.sh
plugin/src/: lib.rs  node_bindings.rs  types.rs
plugin/src/actions/: merge.rs  mod.rs  names.rs
plugin/tests/fixture-projects/hardhat-project/: hardhat.config.js
plugin/tests/fixture-projects/hardhat-project/contracts/: A.sol  B.sol
src/: engine.rs  filter.rs
tests/: mod.rs
tests/hardhat_bindings_macro/: mod.rs
