[workspace]
members = ["core", "cli", "plugin", "crates/*"]

[workspace.dependencies]
serde = "1.0.103"
serde_json = "1.0.103"

# TODO(Velnbur): Remove this once the [PR](https://github.com/rust-ethereum/ethabi/pull/298) is merged.
[workspace.dependencies.ethabi]
default-features = false
git = "https://github.com/al8n/ethabi"
rev = "3decaeaf6fd716d1623d7d0682ece1c78e1f4f50"
features = ["serde"]
