[package]
name = "diamond-merge-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "diamond-merge"
path = "src/main.rs"

[dependencies]
diamond-merge = { path = "../" }

clap = { version = "4.3.17", features = ["derive"] }
serde = { version = "1.0.173", features = ["derive"] }
eyre = "0.6.8"
ethabi = { workspace = true }
serde_json = "1.0.103"
walkdir = "2.3.3"