[package]
name = "diamond-tools-plugin"
version = "0.1.0"
edition = "2021"
description = "A Hardhat plugin"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "=0.2.84"
diamond-tools-core = { path = "../core" }
serde_json = { workspace = true }
serde = { workspace = true }
eyre = "0.6.8"
js-sys = "0.3.61"
wasm-bindgen-futures = "0.4.34"
ethabi = { workspace = true }
serde-wasm-bindgen = "0.5.0"

hardhat-bindings = { path = "../crates/hardhat-bindings" }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
