[package]
name = "diamond-tools-plugin"
version = "0.1.0"
edition = "2021"
description = "A Hardhat plugin"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "=0.2.84"
eyre = "0.6.8"
js-sys = "0.3.61"
wasm-bindgen-futures = "0.4.34"
serde-wasm-bindgen = "0.5.0"

hardhat-bindings = { path = "../crates/hardhat-bindings" }
hardhat-bindings-macro = { path = "../crates/hardhat-bindings-macro" }
diamond-tools-core = { path = "../crates/core" }

serde_json = { workspace = true }
serde = { workspace = true }
ethabi = { workspace = true }
thiserror = "1.0.44"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
