[package]
name = "hardhat-bindings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "=0.2.84"
js-sys = "0.3.61"
wasm-bindgen-futures = "0.4.34"

serde-wasm-bindgen = "0.5.0"
serde_json = { workspace = true }
serde = { workspace = true }
ethabi = { workspace = true }
